[gd_scene load_steps=4 format=3 uid="uid://cscene1locker01"]

[ext_resource type="Script" path="res://scripts/core/panel_controller.gd" id="1_controller"]
[ext_resource type="PackedScene" uid="uid://cvignetteoverlay" path="res://scenes/components/vignette_overlay.tscn" id="2_vignette"]
[ext_resource type="Script" path="res://scripts/scenes/scene1_locker.gd" id="3_scene"]

[node name="Scene1Locker" type="Node2D"]
script = ExtResource("3_scene")

[node name="PanelController" type="Node2D" parent="."]
script = ExtResource("1_controller")
auto_start = true

[node name="Camera2D" type="Camera2D" parent="PanelController"]
position = Vector2(960, 540)

[node name="PanelContainer" type="Node2D" parent="PanelController"]

[node name="InteractionPrompt" type="Control" parent="PanelController"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HintLabel" type="Label" parent="PanelController/InteractionPrompt"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.9)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 24
text = "Raise your hands to catch the ball"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VignetteOverlay" parent="." instance=ExtResource("2_vignette")]

[node name="DebugLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Scene 1: The Locker Room"
